--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
      </div>
      <div class="tab common" id="tab">
      		<a id="lf" href="javascript:;"></a>
+            
      		<ul>
             	<li style="display:block;">
                  	<div class="web">
@@ -54,7 +55,6 @@
                         <p class="mpc">我的名字叫胡瑞,我是一枚小前端希望在前端的道路上实现自我!</p>
                         <div class="btn">TELL ME MORE</div>
                     </div>
-                    <p class="eng">^In the dark of the world to find that ray of sunshine</p> 
                     <img src="img/img1.png"/>
                 </li>
             	<li>
@@ -192,8 +192,8 @@
                     </div>
                     <div class="page2"></div>
                 </div>
-                
             </div>
+                <audio src="mp3/The Last Sigh Of The Wind - Thunder In Everyone Of Us.mp3" autoplay></audio>
      </div>
      <div class="effect common">
      		<div class="effect-box">
@@ -272,6 +272,11 @@
                 </div>
             </div>
      </div>
+    <ul class="shock clearfix" id="shock">
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </div>
 <script src="js/main.js">
 </script>
