--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <span class="s1">天蝎</span>
                         </div>
                         <div class="jx2 clearfix">
-                            <span class="s1">单身</span>
+                            <span class="s1">单身狗</span>
                             <span class="s1">90后</span>
                             <span class="s1">江苏</span>
                         </div>
