--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
                         </a>
                     </li>
                     <li class="eft">
-                        <a href="html/clock.html" target="_blank">
-                            <h3>时钟</h3>
-                            <span>时钟</span>
+                        <a href="html/time3.html" target="_blank">
+                            <h3>生日倒计时</h3>
+                            <span>生日倒计时</span>
                         </a>
                     </li>
                     <li class="eft">
