--- a/html/time3.html
+++ b/html/time3.html
@@ -15,7 +15,6 @@ img{ vertical-align:middle;}
 }
 .isWrite{
 	font-size: 20px;
-	color:
 }
 </style>
 <script>
@@ -42,7 +41,7 @@ window.onload = function(){
 	     var iS = (isTime % (1000 * 60)) / 1000;
 		 var str =addZero(days) + addZero(iH) + addZero(iM) + addZero(iS);
 		 var str1 = str.split(".")[0];
-		 console.log(str1);
+		 //console.log(str1);
 		 document.title = "jiying"+str1;
 		 for(var i = 0; i < str1.length; i++){
 			aImg[i].src = "images/"+str1.charAt(i)+".png";
