--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                     </li>
                     <li class="eft">
                         <a href="html/time3.html" target="_blank">
-                            <h3>她的生日倒计时</h3>
-                            <span>生日倒计时</span>
+                            <h3>倒计时</h3>
+                            <span>倒计时</span>
                         </a>
                     </li>
                     <li class="eft">
