--- a/html/time3.html
+++ b/html/time3.html
@@ -31,7 +31,7 @@ window.onload = function(){
 		 //现在时间戳	
 		 var nowTime = oDate.getTime();
 		 //继迎过生日时间戳
-		 var sunJiYingBirthday = new Date("2018-2-27 23:59:59").getTime();
+		 var sunJiYingBirthday = new Date("2017-12-27 00:00:00").getTime();
 		 //时间差  
 		 var isTime = sunJiYingBirthDay - nowTime;
 		 // var s= isTime/1000;
@@ -52,7 +52,7 @@ window.onload = function(){
 </head>
 <body>
 <div>
-	<h3 style="text-align: center; font-size: 28px; line-height: 42px;">Someone生日倒计时</h3>
+	<h3 style="text-align: center; font-size: 28px; line-height: 42px;">倒计时</h3>
 </div>
 <div id="box">
 	<img src="images/0.png"/>
