--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>myweb</title>
+<title>欢迎来到我的主页</title>
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/main.css">
+<link rel="shortcut icon" href="img/bitbug_favicon.ico" /> 
 <script src="js/move.js"></script>
 <script src="js/addMouseWheel.js"></script>
 <script src="js/domRead.js"></script>
@@ -68,7 +69,7 @@
                             <span></span>
                             <span></span>
                         </div>
-                        <p class="mpc">我的名字叫胡瑞,我是一枚小前端希望在前端的道路上实现自我!</p>
+                        <p class="mpc">黎明中的花朵!</p>
                         <div class="btn">TELL ME MORE</div>
                     </div>
                     <img src="img/bg4.jpg"/>
@@ -277,6 +278,14 @@
     </ul>
 </div>
 <script src="js/main.js">
+</script>
+<script>
+window.onfocus = function(){  
+   document.title="帥(￣▽￣)σ" 
+}  
+window.onblur = function(){  
+   document.title="啵一個(^_^)" 
+}      
 </script>
 </body>
 </html>
