--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
 </script>
 <script>
 window.onfocus = function(){  
-   document.title="帥(￣▽￣)σ" 
+   document.title="帥(￣▽￣)σ";
 }  
 window.onblur = function(){  
-   document.title="啵一個(^_^)" 
+   document.title="啵一個(^_^)";
 }      
 </script>
 </body>
